tests/should_succeed/argfloat.jou
declare printf(pattern: byte*, ...) -> int

def test(x: float) -> float:
    return x

def main() -> int:
    printf("%f", test(1.1))
    return 0
