tests/syntax_error/arg_after_dotdotdot_funcptr.jou
def foo() -> None:
    f: funcptr(byte*, ..., int) -> int  # Error: if '...' is used, it must be the last parameter
